--- a/veritas/.gitignore
+++ b/veritas/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# tina cms
+/tina/__generated__
+/public/admin
+tina-lock.json
+
+# netlify
+/.netlify
