--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
     "next": "15.5.3",
+    "next-intl": "^4.3.12",
     "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
