--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
+    "resend": "^6.1.2",
     "tinacms": "^2.9.0"
   },
   "devDependencies": {
