--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tina:init": "tinacms init"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.6",
+    "@react-email/render": "^1.3.2",
     "@tinacms/cli": "^1.11.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
