Package json for  tina cms

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "tinacms dev -c \"next dev --turbopack\"",
     "build": "tinacms build && next build --turbopack",
     "build:tina": "tinacms build && next build --turbopack",
+    "build:local": "tinacms build --skip-cloud-checks && next build --turbopack",
     "start": "next start",
     "tina:init": "tinacms init"
   },
